force-app/main/default/objects/Account/fields/Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Status__c</fullName>
    <label>Address Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Verification_Status</valueSetName>
    </valueSet>
</CustomField>