force-app/main/default/objects/Account/fields/Number_of_Approved_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approved_Payments__c</fullName>
    <description>The number of &#39;Approved&#39; Payments from Opportunities associated with this Account.</description>
    <inlineHelpText>The number of successful Payments processed from this Account</inlineHelpText>
    <label>Number of Approved Payments (Acct.)</label>
    <summarizedField>Opportunity.Number_of_Approved_Payments__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>