force-app/main/default/objects/Account/fields/Product_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product Order Template: The preferred format for order exports generated for this vendor</inlineHelpText>
    <label>Product Order Template</label>
    <referenceTo>Product_Order_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>