force-app/main/default/objects/Account/fields/Standardized_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Postal_Code__c</fullName>
    <label>Standardized Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>