force-app/main/default/objects/Account/fields/Standardized_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Street_1__c</fullName>
    <label>Standardized Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>