force-app/main/default/objects/Account/fields/Total_Approved_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Payments__c</fullName>
    <description>The sum total of all &#39;Approved&#39; Payments in all Opportunities associated with this Account.</description>
    <inlineHelpText>The total dollar value of payments received from this Account</inlineHelpText>
    <label>Total Approved Payments (Acct.)</label>
    <summarizedField>Opportunity.Total_Approved_Payments__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>