force-app/main/default/objects/Account/recordTypes/Household_Account.recordType-meta.xml
<RecordType>
    <fullName>Household_Account</fullName>
    <active>true</active>
    <label>Household Account</label>
</RecordType>