force-app/main/default/objects/Account/recordTypes/Vendor_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Distributor</fullName>
    <active>true</active>
    <label>Vendor Distributor</label>
</RecordType>