force-app/main/default/objects/Account/listViews/All_Donor_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Donor_Accounts</fullName>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Number_of_Approved_Payments__c</columns>
    <columns>Total_Approved_Payments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household_Account</value>
    </filters>
    <label>All Donor Accounts</label>
</ListView>