force-app/main/default/objects/Account/listViews/Lapsed_Accounts.listView-meta.xml
<ListView>
    <fullName>Lapsed_Accounts</fullName>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Number_of_Approved_Payments__c</columns>
    <columns>Total_Approved_Payments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Approved_Payments__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Membership_Tier__c</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household_Account</value>
    </filters>
    <label>Lapsed Donor Accounts</label>
</ListView>