force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Membership_Tier__c</columns>
    <columns>Number_of_Approved_Payments__c</columns>
    <columns>Total_Approved_Payments__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>